# IPC

./: CMakeLists.txt  pipe_example.c
MQ/: CMakeLists.txt  posix_mq_demo.c
PIPE/: CMakeLists.txt  pipe.md  pipe_demo1.c  pipe_demo2.c  pipe_demo3.c
